--- a/htmlDay1HW.html
+++ b/htmlDay1HW.html
@@ -4,10 +4,46 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="htmlDay1HW.css">
     <title>HTML Day 1 HW</title>
 </head>
 <body>
-    
+    <header><h1>H1 = Heading 1</h1></header>
+    <p> This is a Paragraph. To add padding to an HTML element, we can use CSS. so the padding property sets the padding  between an element's content and its border...</p>
+    <p>This is also a paragraph.</p>
+    <p>
+        line 1: This is the first line of text in the paragraph.<br/>
+        Line 2: This is the second line of text in the paragraph.<br/>
+        Line 3: This is the third line of text in the paragraph.<br/>
+        Line 4: This is the fourth line of text in the paragraph. Which is the end of evry line.
+    </p>
+
+    <p>Using break tag for multi-line list items like this:</p>
+
+    <div>
+        <h3>Related Posts:</h3>
+        <ul>
+            <Li>
+                <a  href="https://en.wikipedia.org/wiki/Morocco" target="_blank">Learn a little bit about Morocco.</a><br/>
+            What could go wrong if you click the link above?</Li>
+            <Li >
+                <a href="https://www.linkedin.com/in/bader-bricha/" target="_blank">Here is my Linkedin profile.</a> Click to connect with me!</Li>
+            <Li >
+                <a href="https://www.indeed.com/q-Web-Designer-l-Seattle,-WA-jobs.html?vjk=c1154f32ef43d22a" target="_blank">Web Designer jobs in Seattle, WA.</a>. Where should I begin?<br/>
+            It is not too early to start looking for apportunities.</Li>
+            <Li >
+                <a href="https://www.linkedin.com/jobs/software-engineer-jobs-bellevue-wa/?currentJobId=3544045400" target="_blank">Entry Level Software Engineer.</a><br/>
+                We are seeking talented individuals that are motivated to kickstart their technology career. No prior professional experience required.</Li>
+
+        </ul>
+    </div>
+    <h2> H2 = Heading 2</h2>
+    <p> This is a Paragraph. To add padding to an HTML element, we can use CSS. so the padding property sets the padding  between an element's content and its border...</p>
+    <p>This is also a paragraph.</p>
+    <h3>H3 = Heading 3</h3>
+    <p> This is a Paragraph. To add padding to an HTML element, we can use CSS. so the padding property sets the padding  between an element's content and its border...</p>
+    <p>This is also a paragraph.</p>
+ 
     
 </body>
 </html>
